[metadata]
name = stackviz
summary = A performance visualization utility for DevStack and Tempest.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/stackviz/latest/
python-requires = >=3.5
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    stackviz
data-files = share/stackviz-html = gulp-build/*

[entry_points]
console_scripts =
    stackviz-export = stackviz.export:main

[compile_catalog]
directory = stackviz/locale
domain = stackviz

[update_catalog]
domain = stackviz
output_dir = stackviz/locale
input_file = stackviz/locale/stackviz.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = stackviz/locale/stackviz.pot
